--- a/WorkTime.Web/Views/Projects/ProjectDetails.cshtml
+++ b/WorkTime.Web/Views/Projects/ProjectDetails.cshtml
@@ -54,7 +54,7 @@
                 @UserInfo.GetName(item.UserId)
             </td>
             <td>
-                    <a type="button" title="Удалить" href="#" onclick="deleteUser(@item.Id, @UserInfo.GetName(item.UserId))"><i class="fa fa-trash"></i></a>
+                    <a type="button" title="Удалить" href="#" onclick="deleteUser(@item.Id, @UserInfo.GetName(item.UserId))"><i class="bx bxs-trash"></i></a>
             </td>
         </tr>
 }
