--- a/WorkTime.Web/Views/Shared/_NavBar.cshtml
+++ b/WorkTime.Web/Views/Shared/_NavBar.cshtml
@@ -6,7 +6,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
 
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
         <div class="container-fluid">
             <div>
                 <button class="btn" type="button" onclick="toggleSideBar()">
