--- a/WorkTime.Web/Views/Shared/_SideBar.cshtml
+++ b/WorkTime.Web/Views/Shared/_SideBar.cshtml
@@ -2,12 +2,12 @@
 @inject UserInformation UserInfo
 
 
-<div id="sideBar" hidden>
+<div id="sideBar" class="hidden">
     <div id="scrim" class="dark-background" onclick="toggleSideBar()"></div>
-    <div id="sideBarMenu" class="px-0 bg-light slide">
-        <div class="d-flex flex-column align-items-center align-items-sm-start pt-2 text-white min-vh-100">
-            <div class="ps-3 pb-3" style="padding-top: 0.4rem; margin-left: -0.25rem">
-                <button class="btn" type="button" onclick="toggleSideBar()">
+    <div id="sideBarMenu" class="px-0">
+        <div class="d-flex flex-column align-items-center align-items-sm-start text-white min-vh-100">
+            <div class="ps-3 pb-3 pt-3" id="sideBarLogo">
+                <button class="btn" type="button" onclick="toggleSideBar()" style="margin-top: -0.7rem">
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </button>
                 <a class="navbar-brand" style="color: rgba(0,0,0,.9);" asp-area="" asp-controller="Home" asp-action="Index">WorkTime</a>
@@ -16,34 +16,49 @@
             <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="sideBarLinks">
                 <li class="nav-item">
                     <a type="button" class="nav-link align-middle px-0" asp-area="" asp-controller="Home" asp-action="Index">
-                        <i class="my-2 ms-3 fa fa-home"></i> <span class="ms-2 d-none d-sm-inline text-dark">Главная</span>
+                        <i class="my-2 ms-3 bx bxs-home-alt-2"></i> <span class="ms-2 d-none d-sm-inline text-dark">Главная</span>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link align-middle px-0" asp-area="" asp-controller="Projects" asp-action="Index">
-                        <i class="my-2 ms-3 fa fa-home"></i> <span class="ms-2 d-none d-sm-inline text-dark">Проекты</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link align-middle px-0" asp-area="" asp-controller="Tasks" asp-action="Index">
-                        <i class="my-2 ms-3 fa fa-home"></i> <span class="ms-2 d-none d-sm-inline text-dark">Задачи</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link align-middle px-0" asp-area="" asp-controller="Invoices" asp-action="Index">
-                        <i class="my-2 ms-3 fa fa-home"></i> <span class="ms-2 d-none d-sm-inline text-dark">Счета</span>
-                    </a>
-                </li>
+
                 <li class="nav-item">
                     <a class="nav-link align-middle px-0" asp-area="" asp-controller="Invoices" 
                     asp-action="MyInvoices" asp-route-id="@UserInfo.GetMyId()">
-                        <i class="my-2 ms-3 fa fa-home"></i> <span class="ms-2 d-none d-sm-inline text-dark">Мои счета</span>
+                        <i class="my-2 ms-3 bx bxs-food-menu"></i> <span class="ms-2 d-none d-sm-inline text-dark">Мои счета</span>
                     </a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link align-middle px-0" asp-area="" asp-controller="Tasks"
+                       asp-action="MyTasks" asp-route-id="@UserInfo.GetMyId()">
+                        <i class="my-2 ms-3 bx bx-code"></i> <span class="ms-2 d-none d-sm-inline text-dark">Мои задачи</span>
+                    </a>
+                </li>
+                @if (User.IsInRole("Administrator") || User.IsInRole("Manager"))
+                {
+                    <li class="nav-item">
+                        <a class="nav-link align-middle px-0" asp-area="" asp-controller="Projects" asp-action="Index">
+                            <i class="my-2 ms-3 bx bx-folder"></i> <span class="ms-2 d-none d-sm-inline text-dark">Проекты</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link align-middle px-0" asp-area="" asp-controller="Tasks" asp-action="Index">
+                            <i class="my-2 ms-3 bx bx-clipboard"></i> <span class="ms-2 d-none d-sm-inline text-dark">Задачи</span>
+                        </a>
+                    </li>
+                }
+                @if (User.IsInRole("Administrator") || User.IsInRole("Bookkeeper"))
+                {
+                    <li class="nav-item">
+                        <a class="nav-link align-middle px-0" asp-area="" asp-controller="Invoices" asp-action="Index">
+                            <i class="my-2 ms-3 bx bxs-food-menu"></i> <span class="ms-2 d-none d-sm-inline text-dark">Счета</span>
+                        </a>
+                    </li>
+                }
                 @if (User.IsInRole("Administrator") || User.IsInRole("Manager")){
                         <li class="nav-item">
                         <a class="nav-link align-middle px-0" asp-area="" asp-controller="Users" asp-action="Index">
-                            <i class="my-2 ms-3 fa fa-user-circle-o"></i> <span class="ms-2 d-none d-sm-inline text-dark">Пользователи</span>
+                            <i class="my-2 ms-3 bx bxs-user-account"></i> <span class="ms-2 d-none d-sm-inline text-dark">Пользователи</span>
                         </a>
                     </li>
                 }
