--- a/WorkTime.Web/Views/Shared/_SideBar.cshtml
+++ b/WorkTime.Web/Views/Shared/_SideBar.cshtml
@@ -6,12 +6,13 @@
     <div id="scrim" class="dark-background" onclick="toggleSideBar()"></div>
     <div id="sideBarMenu" class="px-0">
         <div class="d-flex flex-column align-items-center align-items-sm-start text-white min-vh-100">
+            <!--
             <div class="ps-3 pb-3 pt-3" id="sideBarLogo">
                 <button class="btn" type="button" onclick="toggleSideBar()" style="margin-top: -0.7rem">
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </button>
                 <a class="navbar-brand" style="color: rgba(0,0,0,.9);" asp-area="" asp-controller="Home" asp-action="Index">WorkTime</a>
-            </div>
+            </div>-->
 
             <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="sideBarLinks">
                 <li class="nav-item">
