--- a/WorkTime.Web/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/WorkTime.Web/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -6,5 +6,5 @@
 
 <header>
     <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">Тебе сюда нельзя.</p>
+    <p class="text-danger">У вас нет доступа к данной информации.</p>
 </header>
