--- a/WorkTime.Web/Views/Invoices/Create.cshtml
+++ b/WorkTime.Web/Views/Invoices/Create.cshtml
@@ -123,7 +123,14 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script>
+        $(document).ready(function () {
+            $("#ProjectId").select2();
+            $("#UserId").select2();
+        });
+
         let hours = 0, wage = 0, tasksArray = [], bonus = 0;
 
         getUsers();
