--- a/WorkTime.Web/Views/Shared/_LoginPartial.cshtml
+++ b/WorkTime.Web/Views/Shared/_LoginPartial.cshtml
@@ -9,11 +9,11 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Настройки пользователя">@UserInfo.GetName()</a>
+            <a class="nav-link light-element" style="font-weight: 500;" asp-area="Identity" asp-page="/Account/Manage/Index" title="Настройки пользователя">@UserInfo.GetName()</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" title="Выйти" class="nav-link btn btn-link text-dark"><i style="font-size: 14.9pt;" class='bx bx-log-out'></i></button>
+                <button type="submit" title="Выйти" class="nav-link btn btn-link light-element light-element-hover"><i style="font-size: 14.9pt;" class='bx bx-log-out'></i></button>
         </form>
     </li>
 }
